# incubator-impala

be/: CMakeLists.txt
be/src/catalog/: catalog-server.cc  catalog.cc
be/src/exec/: CMakeLists.txt  catalog-op-executor.cc  hdfs-orc-scanner-test.cc  hdfs-orc-scanner.cc  hdfs-orc-scanner.h  hdfs-parquet-scanner.cc  hdfs-parquet-scanner.h  hdfs-scan-node-base.cc  hdfs-scanner.cc  hdfs-scanner.h
be/src/exprs/: expr-test.cc  mask-functions-ir.cc  mask-functions.h
be/src/orc/: Adaptor.hh  C09Adapter.cc  CMakeLists.txt  ColumnPrinter.cc  ColumnReader.cc  ColumnReader.hh  Compression.hh  Int128.cc  LzoDecompressor.hh  MemoryPool.cc  Options.hh  OrcFile.cc  Reader.cc  Reader.hh  ReaderImpl.hh  Statistics.cc  Statistics.hh  StatisticsImpl.hh  StripeStream.cc  StripeStream.hh  Type.hh  TypeImpl.hh  Vector.cc  Vector.hh  orc-config.hh
be/src/orc/wrap/: orc-proto-wrapper.cc  orc-proto-wrapper.hh
be/src/runtime/: coordinator-backend-state.cc  tmp-file-mgr.cc
be/src/service/: client-request-state.cc  impala-server.cc
be/src/util/: backend-gflag-util.cc  impalad-metrics.cc  impalad-metrics.h  runtime-profile.cc  runtime-profile.h
common/function-registry/: impala_functions.py
common/thrift/: BackendGflags.thrift  CatalogObjects.thrift
docs/topics/: impala_known_issues.xml
fe/: pom.xml
fe/src/compat-hive-2/java/org/apache/impala/compat/: MetastoreShim.java
fe/src/compat-hive-3/java/org/apache/impala/compat/: MetastoreShim.java
fe/src/main/cup/: sql-parser.cup
fe/src/main/java/org/apache/impala/analysis/: AnalysisContext.java  Analyzer.java  CreateTableAsSelectStmt.java  Expr.java  FromClause.java  InlineViewRef.java  InsertStmt.java  PlanHint.java  QueryStmt.java  SelectStmt.java  StatementBase.java  StmtMetadataLoader.java  Subquery.java  WithClause.java
fe/src/main/java/org/apache/impala/authorization/: TableMask.java
fe/src/main/java/org/apache/impala/catalog/: CatalogServiceCatalog.java  FileMetadataLoader.java  HdfsFileFormat.java  HdfsTable.java  ParallelFileMetadataLoader.java  TableLoader.java  TableLoadingMgr.java
fe/src/main/java/org/apache/impala/catalog/local/: CatalogdMetaProvider.java
fe/src/main/java/org/apache/impala/common/: FileSystemUtil.java
fe/src/main/java/org/apache/impala/planner/: HdfsScanNode.java
fe/src/main/java/org/apache/impala/service/: BackendConfig.java  CatalogOpExecutor.java  Frontend.java  FrontendProfile.java  JniCatalog.java
fe/src/main/java/org/apache/impala/util/: MetaStoreUtil.java
fe/src/main/jflex/: sql-scanner.flex
fe/src/test/java/org/apache/impala/analysis/: AnalyzeDDLTest.java  AnalyzeStmtsTest.java  AuthorizationTest.java  ParserTest.java  ToSqlTest.java
fe/src/test/resources/: hive-site.xml.py
java/: pom.xml
shell/: impala_shell.py
testdata/LineItemMultiBlock/: README.dox  lineitem_orc_multiblock_one_stripe.orc  lineitem_threeblocks.orc
testdata/datasets/functional/: schema_constraints.csv
testdata/workloads/functional-query/: functional-query_core.csv  functional-query_exhaustive.csv  functional-query_pairwise.csv
testdata/workloads/functional-query/queries/QueryTest/: grant_revoke.test  grant_revoke_kudu.test  nested-types-orc-basic.test  ranger_row_filtering.test
testdata/workloads/tpcds/: tpcds_core.csv
testdata/workloads/tpch/: tpch_core.csv
tests/authorization/: test_ranger.py
tests/common/: custom_cluster_test_suite.py  skip.py
tests/custom_cluster/: test_catalog_cache_blacklist.py  test_custom_hive_configs.py  test_local_catalog.py
tests/metadata/: test_ddl.py  test_hms_integration.py
tests/query_test/: test_decimal_queries.py  test_nested_types.py  test_scanners.py  test_tpch_queries.py
tests/shell/: test_shell_commandline.py
